generated/HassoobArabiParser.py
# Generated from HassoobArabi.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HassoobArabiParser ( Parser ):

    grammarFileName = "HassoobArabi.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u0625\\u0630\\u0627'", "'\\u0648\\u0625\\u0644\\u0627'", 
                     "'\\u0628\\u064A\\u0646\\u0645\\u0627'", "'\\u0644\\u0643\\u0644'", 
                     "'\\u0645\\u0646'", "'\\u0625\\u0644\\u0649'", "'\\u0641\\u064A'", 
                     "'\\u0628\\u062E\\u0637\\u0648\\u0629'", "'\\u062F\\u0627\\u0644\\u0629'", 
                     "'\\u0625\\u0631\\u062C\\u0639'", "'\\u0627\\u0648\\u0642\\u0641'", 
                     "'\\u0627\\u0633\\u062A\\u0645\\u0631'", "'\\u0635\\u062D'", 
                     "'\\u062E\\u0637\\u0623'", "'\\u0641\\u0627\\u0631\\u063A'", 
                     "'\\u0631\\u0645\\u0632'", "<INVALID>", "'\\u0647\\u0640'", 
                     "'\\u0644\\u0627\\u0646\\u0647\\u0627\\u064A\\u0629'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+='", "'-='", 
                     "'*='", "'/='", "'^='", "'%='", "'++='", "'**'", "'++'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\u00F7'", "'%'", "'^'", 
                     "'=>'", "'=='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<'", "'>'", "'='", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "<INVALID>", "<INVALID>", "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "IDHA", "WA_ILLA", "BAYNAMA", "LIKULL", 
                      "MIN", "ILA", "FI", "BKHUTWA", "DALA", "IRJA", "AWQIF", 
                      "ISTAMIRR", "SAHIH", "KHATA", "FARIG", "RAMZ", "PI_CONST", 
                      "E_CONST", "INF_CONST", "AND", "OR", "NOT", "PLUS_ASSIGN", 
                      "MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", "CARET_ASSIGN", 
                      "PERCENT_ASSIGN", "CONCAT_ASSIGN", "MAT_MUL", "STR_CONCAT", 
                      "PLUS", "MINUS", "STAR", "SLASH", "INT_DIV", "PERCENT", 
                      "CARET", "ARROW", "EQ", "NEQ", "LTE", "GTE", "LT", 
                      "GT", "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "LBRACE", "RBRACE", "COMMA", "SEMI", "COLON", "DOT", 
                      "INTEGER_LIT", "FLOAT_LIT", "STRING_LIT", "FSTRING_LIT", 
                      "IDENTIFIER", "LINE_COMMENT", "ARABIC_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_functionDef = 2
    RULE_paramList = 3
    RULE_block = 4
    RULE_ifStmt = 5
    RULE_elseIfClause = 6
    RULE_elseClause = 7
    RULE_whileStmt = 8
    RULE_forEachStmt = 9
    RULE_forRangeStmt = 10
    RULE_returnStmt = 11
    RULE_breakStmt = 12
    RULE_continueStmt = 13
    RULE_symbolDecl = 14
    RULE_assignStmt = 15
    RULE_augAssignStmt = 16
    RULE_augOp = 17
    RULE_indexAssignStmt = 18
    RULE_exprStmt = 19
    RULE_expression = 20
    RULE_lambdaExpr = 21
    RULE_orExpr = 22
    RULE_andExpr = 23
    RULE_notExpr = 24
    RULE_equalityExpr = 25
    RULE_relationalExpr = 26
    RULE_addExpr = 27
    RULE_mulExpr = 28
    RULE_unaryExpr = 29
    RULE_powerExpr = 30
    RULE_postfixExpr = 31
    RULE_argList = 32
    RULE_primary = 33
    RULE_listLiteral = 34
    RULE_indexList = 35

    ruleNames =  [ "program", "statement", "functionDef", "paramList", "block", 
                   "ifStmt", "elseIfClause", "elseClause", "whileStmt", 
                   "forEachStmt", "forRangeStmt", "returnStmt", "breakStmt", 
                   "continueStmt", "symbolDecl", "assignStmt", "augAssignStmt", 
                   "augOp", "indexAssignStmt", "exprStmt", "expression", 
                   "lambdaExpr", "orExpr", "andExpr", "notExpr", "equalityExpr", 
                   "relationalExpr", "addExpr", "mulExpr", "unaryExpr", 
                   "powerExpr", "postfixExpr", "argList", "primary", "listLiteral", 
                   "indexList" ]

    EOF = Token.EOF
    IDHA=1
    WA_ILLA=2
    BAYNAMA=3
    LIKULL=4
    MIN=5
    ILA=6
    FI=7
    BKHUTWA=8
    DALA=9
    IRJA=10
    AWQIF=11
    ISTAMIRR=12
    SAHIH=13
    KHATA=14
    FARIG=15
    RAMZ=16
    PI_CONST=17
    E_CONST=18
    INF_CONST=19
    AND=20
    OR=21
    NOT=22
    PLUS_ASSIGN=23
    MINUS_ASSIGN=24
    STAR_ASSIGN=25
    SLASH_ASSIGN=26
    CARET_ASSIGN=27
    PERCENT_ASSIGN=28
    CONCAT_ASSIGN=29
    MAT_MUL=30
    STR_CONCAT=31
    PLUS=32
    MINUS=33
    STAR=34
    SLASH=35
    INT_DIV=36
    PERCENT=37
    CARET=38
    ARROW=39
    EQ=40
    NEQ=41
    LTE=42
    GTE=43
    LT=44
    GT=45
    ASSIGN=46
    LPAREN=47
    RPAREN=48
    LBRACKET=49
    RBRACKET=50
    LBRACE=51
    RBRACE=52
    COMMA=53
    SEMI=54
    COLON=55
    DOT=56
    INTEGER_LIT=57
    FLOAT_LIT=58
    STRING_LIT=59
    FSTRING_LIT=60
    IDENTIFIER=61
    LINE_COMMENT=62
    ARABIC_COMMENT=63
    BLOCK_COMMENT=64
    WS=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HassoobArabiParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HassoobArabiParser.StatementContext)
            else:
                return self.getTypedRuleContext(HassoobArabiParser.StatementContext,i)


        def getRuleIndex(self):
            return HassoobArabiParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HassoobArabiParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4468274530683452954) != 0):
                self.state = 72
                self.statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(HassoobArabiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HassoobArabiParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AugAssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def augAssignStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.AugAssignStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAugAssignStatement" ):
                listener.enterAugAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAugAssignStatement" ):
                listener.exitAugAssignStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAugAssignStatement" ):
                return visitor.visitAugAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class SymbolDeclStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def symbolDecl(self):
            return self.getTypedRuleContext(HassoobArabiParser.SymbolDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbolDeclStatement" ):
                listener.enterSymbolDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbolDeclStatement" ):
                listener.exitSymbolDeclStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbolDeclStatement" ):
                return visitor.visitSymbolDeclStatement(self)
            else:
                return visitor.visitChildren(self)


    class IndexAssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def indexAssignStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.IndexAssignStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexAssignStatement" ):
                listener.enterIndexAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexAssignStatement" ):
                listener.exitIndexAssignStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexAssignStatement" ):
                return visitor.visitIndexAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class ForRangeStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forRangeStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.ForRangeStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForRangeStatement" ):
                listener.enterForRangeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForRangeStatement" ):
                listener.exitForRangeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForRangeStatement" ):
                return visitor.visitForRangeStatement(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.WhileStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.AssignStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStatement" ):
                listener.enterAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStatement" ):
                listener.exitAssignStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class BreakStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def breakStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.BreakStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.IfStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.ReturnStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)


    class ExprStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exprStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.ExprStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStatement" ):
                listener.enterExprStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStatement" ):
                listener.exitExprStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStatement" ):
                return visitor.visitExprStatement(self)
            else:
                return visitor.visitChildren(self)


    class FunctionDefStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionDef(self):
            return self.getTypedRuleContext(HassoobArabiParser.FunctionDefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefStmt" ):
                listener.enterFunctionDefStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefStmt" ):
                listener.exitFunctionDefStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefStmt" ):
                return visitor.visitFunctionDefStmt(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def continueStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.ContinueStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStatement" ):
                listener.enterContinueStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStatement" ):
                listener.exitContinueStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStatement" ):
                return visitor.visitContinueStatement(self)
            else:
                return visitor.visitChildren(self)


    class ForEachStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HassoobArabiParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forEachStmt(self):
            return self.getTypedRuleContext(HassoobArabiParser.ForEachStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForEachStatement" ):
                listener.enterForEachStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForEachStatement" ):
                listener.exitForEachStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForEachStatement" ):
                return visitor.visitForEachStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = HassoobArabiParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = HassoobArabiParser.FunctionDefStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.functionDef()
                pass

            elif la_ == 2:
                localctx = HassoobArabiParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.ifStmt()
                pass

            elif la_ == 3:
                localctx = HassoobArabiParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.whileStmt()
                pass

            elif la_ == 4:
                localctx = HassoobArabiParser.ForEachStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.forEachStmt()
                pass

            elif la_ == 5:
                localctx = HassoobArabiParser.ForRangeStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.forRangeStmt()
                pass

            elif la_ == 6:
                localctx = HassoobArabiParser.ReturnStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.returnStmt()
                pass

            elif la_ == 7:
                localctx = HassoobArabiParser.BreakStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.breakStmt()
                pass

            elif la_ == 8:
                localctx = HassoobArabiParser.ContinueStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.continueStmt()
                pass

            elif la_ == 9:
                localctx = HassoobArabiParser.SymbolDeclStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 88
                self.symbolDecl()
                pass

            elif la_ == 10:
                localctx = HassoobArabiParser.AssignStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 89
                self.assignStmt()
                pass

            elif la_ == 11:
                localctx = HassoobArabiParser.AugAssignStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 90
                self.augAssignStmt()
                pass

            elif la_ == 12:
                localctx = HassoobArabiParser.IndexAssignStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 91
                self.indexAssignStmt()
                pass

            elif la_ == 13:
                localctx = HassoobArabiParser.ExprStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 92
                self.exprStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DALA(self):
            return self.getToken(HassoobArabiParser.DALA, 0)

        def IDENTIFIER(self):
            return self.getToken(HassoobArabiParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(HassoobArabiParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HassoobArabiParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(HassoobArabiParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(HassoobArabiParser.ParamListContext,0)


        def getRuleIndex(self):
            return HassoobArabiParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):
